--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -13,9 +13,9 @@
 
     <FrameLayout
         android:id="@+id/actionBarLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:background="@color/purple_500">
+        android:layout_width="match_parent"
+        android:background="#E7EAEA"
+        android:layout_height="60dp">
 
         <EditText
             android:id="@+id/searchPlaceEdit"
